--- a/books-frontend/src/app/books/book-list/book-list.component.html
+++ b/books-frontend/src/app/books/book-list/book-list.component.html
@@ -9,6 +9,7 @@
         <th>Author</th>
         <th>Price</th>
         <th>Stock</th>
+        <th>Actions</th>
       </tr>
       </thead>
       <tbody>
@@ -19,9 +20,16 @@
             <td>{{ book.author }}</td>
             <td>{{ book.price }}</td>
             <td>{{ book.stock }}</td>
+            <td class="btn-group">
+              <button (click)="placeOrder(book.id)" class="btn btn-primary">Place order</button>
+              <a [routerLink]="['/books/update', book.id]" class="btn btn-warning">Edit</a>
+              <button (click)="deleteBook(book.id)" class="btn btn-danger">Delete</button>
+            </td>
           </tr>
         }
       </tbody>
     </table>
   </div>
 </div>
+
+<app-orders-list />
